2009/12/07 (T.S.)

	* drv5282DMA.c: fixed compiler warnings (print formats).

2009/10/17 (T.S.)

	* drv5282QSPI.c: must use a binary (not simple binary) semaphore
	for mutex - otherwise there is no priority inheritance and creation
	fails under 4.10.